Replaced get(0) with getFirst()